<?xml version="1.0"?>
<package>
  <name>helloworld</name>
  <version>0.0.0</version>
  <description>The rosserial_ard package</description>

  <maintainer email="vmatos@todo.todo">vmatos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_arduino</build_depend>  
  <build_depend>helloworld_msgs</build_depend>
  
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>helloworld_msgs</run_depend>
</package>
